Apps/n8n/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
      service: n8n
  template:
    metadata:
      labels:
        app: n8n
        service: n8n
    spec:
      restartPolicy: Always
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          name: n8n
          image: n8nio/n8n:latest
          ports:
          - containerPort: 5678
          resources:
              requests:
                memory: "250Mi"
              limits:
                memory: "500Mi"
          volumeMounts:
          - mountPath: /home/node/.n8n
            name: n8n-claim0
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim
        - name: postgres-secret
          secret:
            secretName: postgres-secret
